--- a/index.html
+++ b/index.html
@@ -9,14 +9,21 @@
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     </head>
 
-    <header class="navigation" id="navbar">
+    <body>
 
-        <!-- logo -->
-        <a href="">SHOES!</a>
-    </header>
+        <!-- Navbar -->
+        <header>
+            <a href="index.html" class="logo"><img src="assets/icons/logo21.png"></a>
+            <ul class="navbar">
+                <li><a class="menu_item" href="#">Home</a></li>
+                <li><a class="menu_item" href="#">Collections</a></li>
+                <li><a class="menu_item" href="#">Store</a></li>
+            </ul>
+            <a href="Pages/contact.html" class="btn"><img src="assets/icons/login.png"</a>
+        </header>
 
-    <section>
 
-    </section>
 
+        
+    </body>
 </html>
