--- a/index.html
+++ b/index.html
@@ -15,15 +15,32 @@
         <header>
             <a href="index.html" class="logo"><img src="assets/icons/logo21.png"></a>
             <ul class="navbar">
-                <li><a class="menu_item" href="#">Home</a></li>
+                <li><a class="menu_item" id="active" href="#">Home</a></li>
                 <li><a class="menu_item" href="#">Collections</a></li>
                 <li><a class="menu_item" href="#">Store</a></li>
             </ul>
-            <a href="Pages/contact.html" class="btn"><img src="assets/icons/login.png"</a>
+            <a href="" class="btn"><img src="assets/icons/login.png"></a>
         </header>
 
+        <section class="page1">
+            <div class="hero">
+                <div class="desc">
+                    <h1>Air Force 1 <span>Mid' 7</span></h1>
+                    <p>The Air Force 1 Mid '07 is everything you know best:<br>
+                        crisp overlays, bold accents and the perfect amount<br>
+                        of flash to let you shine. The padded, mid-height <br>
+                        collar with classic hook-and-loop closure adds <br>
+                        heritage b-ball comfort while Nike Air cushioning <br>
+                        helps deliver performance comfort.<br>
+                    </p>
+                    <a href="" class="btn">Buy One!</a>
 
+                    <div class="imgBox">
+                        <img src="nike/AF1 Mid 7/af12.png">
+                    </div>
 
-        
+                </div>
+            </div>
+        </section>
     </body>
 </html>
