--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
         </header>
 
         <section class="page1">
+
+            <div class="nikeLogo">
+                <img src="assets/icons/nike.png">
+            </div>
+
             <div class="hero">
+
                 <div class="desc">
                     <h1>Air Force 1 <span>Mid' 7</span></h1>
                     <p>The Air Force 1 Mid '07 is everything you know best:<br>
@@ -34,13 +40,40 @@
                         helps deliver performance comfort.<br>
                     </p>
                     <a href="" class="btn">Buy One!</a>
-
-                    <div class="imgBox">
-                        <img src="nike/AF1 Mid 7/af12.png">
-                    </div>
-
                 </div>
+
+                <div class="imgBox">
+                    <img src="nike/AF1 Mid 7/af12 (1).png">
+                </div>
+
             </div>
+        </section>
+
+        <section class="featuredShoes">
+            <div class="featTitle">
+                <h1 id="title"><ul>Featured Shoe</ul></h1>
+            </div>
+
+            <div class="hero2">
+                <div class="shoeSlider">
+                    <img src="nike/Air Jordan 11 CMFT low/jordan11.png" alt="jordan11">
+                </div>
+    
+                <div class="featDesc">
+                    <h1>Nike Air Jordan 11s</h1>
+                    <p>Revel in comfort while repping an icon. These kicks <br>
+                        pull in distinct elements from the original AJ11, like <br>
+                        stretchy webbing laces loops and a mudguard <br>
+                        wraps over the toe. Lightweight foam and Zoom Air <br>
+                        cushioning make every step comfortable, and the <br>
+                        padded collar and tongue give it a snug, plush feel <br>
+                        you'll want to wear all day.
+                    </p>
+                    <a href="" class="featbtn">Check Them Out</a>
+                </div>
+
+            </div>
+    
         </section>
     </body>
 </html>
