--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="wifth=device-width, initial-scale:1">
         <title>Shoes Portfolio</title>
 
+        <!-- Title Logo -->
+        <link rel="icon" href="" type="image/icon type">
+
         <!-- CSS LINKS -->
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
     </head>
