--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <!-- CSS LINKS -->
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+
     </head>
 
     <body>
@@ -50,9 +51,11 @@
                 </div>
 
             </div>
+
         </section>
 
         <section class="featuredShoes">
+
             <div class="featTitle">
                 <h1 id="title"><ul>Featured Shoe</ul></h1>
             </div>
@@ -78,5 +81,11 @@
             </div>
     
         </section>
+
+        <section class="reviews">
+            
+            <div></div>
+        </section>
+
     </body>
 </html>
