--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <!-- CSS LINKS -->
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
+        <!-- Script -->
+        <script src="assets/js/script.js"></script>
     </head>
 
     <body>
