--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="featuredShoes">
 
             <div class="featTitle">
-                <h1 id="title"><ul>Featured Shoe</ul></h1>
+                <h1 id="title">Featured Shoe</h1>
             </div>
 
             <div class="hero2">
@@ -82,11 +82,6 @@
 
             </div>
     
-        </section>
-
-        <section class="reviews">
-            
-            <div></div>
         </section>
 
     </body>
