--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a class="menu_item" href="#">Collections</a></li>
                 <li><a class="menu_item" href="#">Store</a></li>
             </ul>
-            <a href="" class="btn"><img src="assets/icons/login.png"></a>
+            <a href="" class="btnav"><img src="assets/icons/login.png"></a>
         </header>
 
         <section class="page1">
