--- a/index.html
+++ b/index.html
@@ -31,16 +31,22 @@
                 <li><a class="menu_item" href="#">Store</a></li>
             </ul>
 
-            <div class="navbtns">
-                <a href="" class="btnav"><img src="assets/icons/login.png"></a>
-                
-                <svg width="23px" height="22px" fill="#111" viewBox="0 0 24 24" href="#">
-                    <a href="#" class="icon-btn">
-                        <path d="M16 7a1 1 0 0 1-1-1V3H9v3a1 1 0 0 1-2 0V3a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v3a1 1 0 0 1-1 1z"><a href="#"></a></path>
-                        <path d="M20 5H4a2 2 0 0 0-2 2v13a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a2 2 0 0 0-2-2zm0 15a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7h16z"><a href="#"></a></path>
-                    </a>
-                </svg>
+            <div class="functionlinks">
+                <a href=""><img src="assets/icons/login.png" class="loginico" /></a>
+
+                <div class="navbtns"><a href="">
+                    
+                    <svg width="23px" height="22px" fill="#111" viewBox="0 0 24 24" href="#">
+                        <a href="#" class="icon-btn">
+                            <path d="M16 7a1 1 0 0 1-1-1V3H9v3a1 1 0 0 1-2 0V3a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v3a1 1 0 0 1-1 1z"><a href="#"></a></path>
+                            <path d="M20 5H4a2 2 0 0 0-2 2v13a3 3 0 0 0 3 3h14a3 3 0 0 0 3-3V7a2 2 0 0 0-2-2zm0 15a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V7h16z"><a href="#"></a></path>
+                        </a>
+                    </svg>
+
+                </a></div>
+
             </div>
+
         </header>
 
         <section class="page1">
