--- a/index.html
+++ b/index.html
@@ -105,5 +105,15 @@
     
         </section>
 
+        <section class="reviews customrev">
+
+            <div class="TopHeader">   
+                <h2>Here's What Our Customers Say</h2>
+            </div>
+
+            <hr width="20">
+
+        </section>
+
     </body>
 </html>
